--- a/todo-webapp.cabal
+++ b/todo-webapp.cabal
@@ -25,14 +25,14 @@ library
                      , Todo.Utilities
   build-depends:       base                      >= 4.7     && < 5
                      , bytestring                >= 0.9.1   && < 0.11
-                     , heist                     >= 0.14    && < 0.15
-                     , lens                      >= 4.12    && < 4.14
+                     , heist                     >= 1.0     && < 1.1
+                     , map-syntax                >= 0.2     && < 0.5
+                     , lens                      >= 4.12    && < 4.15
                      , mtl                       >= 2       && < 3
-                     , snap                      >= 0.13    && < 0.15
-                     , snap-core                 >= 0.9     && < 0.10
-                     , snap-extras               >= 0.11    && < 0.12
-                     , snap-server               >= 0.9     && < 0.10
-                     , snap-loader-static        >= 0.9     && < 0.10
+                     , snap                      >= 1.0     && <1.1
+                     , snap-core                 >= 1.0     && <1.1
+                     , snap-server               >= 1.0     && <1.1
+                     , snap-loader-static        >= 0.9     && < 1.1
                      , text                      >= 0.11    && < 1.3
                      , xmlhtml                   >= 0.1     && < 0.3
                      , HDBC                      >= 2.3     && <= 2.5
@@ -42,7 +42,7 @@ library
   default-language:    Haskell2010
 
   if flag(development)
-    build-depends:    snap-loader-dynamic == 0.10.*
+    build-depends:    snap-loader-dynamic == 1.*
     cpp-options:      -DDEVELOPMENT
     -- In development mode, speed is already going to suffer, so skip
     -- the fancy optimization flags.  Additionally, disable all
@@ -55,7 +55,7 @@ library
       ghc-options:  -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                     -fno-warn-orphans -fno-warn-unused-do-bind
     else
-      ghc-options:  -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
+      ghc-options:  -Wall -fwarn-tabs -funbox-strict-fields -O2
                     -fno-warn-orphans
 
 executable todo-webapp-exe
